# temporal-tiny-setup

./: .gitignore  README.md  TEMPORAL_ARCHITECTURE.txt
01-basic-simulation/: README.md  activities.py  run_deployment.py
02-airflow-integration/: activities.py  run_worker.py
03-ansible-integration/: README.md  models.py  requirements.txt
04-complete-integration/: README.md  activities.py  monitor_workflow.py  run_worker.py  setup_caso04.bat  test_ansible_direct.py  workflows.py
05-multitenant/: COMANDOS_UTILES.md  DIAGRAMAS.md  INDICE.md  INICIO.md  INICIO_RAPIDO.md  MULTITENANT.md  README.md  RESUMEN_EJECUTIVO.md  activities.py  custom_ui_example.py  models.py  multitenant_demo.py  (+4 more)
temporal/07-airflow-to-temporal-mcp-example/: README.md  pyproject.toml
temporal/07-airflow-to-temporal-mcp-example/config/: platform_config.yaml
temporal/07-airflow-to-temporal-mcp-example/examples/01-Dummy/: README.md  sample_dag.py
temporal/07-airflow-to-temporal-mcp-example/examples/02-RealDag/: ejecutar_despertar_tr.py
temporal/07-airflow-to-temporal-mcp-example/examples/02-RealDag/input_real_dag_chogar/: chogar_despertar_tr.py
temporal/07-airflow-to-temporal-mcp-example/examples/02-RealDag/output_ia_only/: despertar_tr_worker.py  despertar_tr_workflow.py
temporal/07-airflow-to-temporal-mcp-example/examples/02-RealDag/output_mcp_server/: README.md  activities.py
temporal/07-airflow-to-temporal-mcp-example/src/airflow_to_temporal_mcp/: __main__.py
temporal/07-airflow-to-temporal-mcp-example/src/airflow_to_temporal_mcp/generators/: activity_gen.py  workflow_gen.py
(+187 files in other folders)
