[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-to-temporal-mcp"
version = "0.1.0"
description = "MCP Server para migración de Airflow DAGs a Temporal Workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Platform Team", email = "platform@company.com" }
]
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    "ast-grep-py>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/airflow_to_temporal_mcp"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
